#set(IOCOD_DX_TARGET 11)
#target_include_directories(iocod PUBLIC "" "imgui" "include")
#add_subdirectory("csv")
#add_subdirectory("imgui")
#add_subdirectory("application")
#add_subdirectory("core")
#add_subdirectory("platform")
#add_subdirectory("system")
#target_sources(iocod PRIVATE "precompiled/precompiled.cc")
#target_precompile_headers(iocod PRIVATE "precompiled/precompiled.h")

target_sources(iocod PRIVATE "iocod.cxx")
#target_precompile_headers(iocod PRIVATE "iocod.h")

target_include_directories(iocod PUBLIC "" "include")
add_subdirectory("cvar")
add_subdirectory("engine")
add_subdirectory("plugins")
add_subdirectory("system")
add_subdirectory("misc")
target_sources(iocod PRIVATE "main.cxx")
